Anonymous | Login | 2021-01-23 10:19 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031023 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2019-10-03 02:27 | 2020-12-02 17:12 | ||||
Reporter | galbramc | ||||||||
Assigned To | apn | ||||||||
Priority | high | Severity | major | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031023: Fillet regression in OCCT 7.4 from 7.3 | ||||||||
Description | The attached fillet example works with OCCT 7.3 and older, but fails with OCCT 7.4. | ||||||||
Steps To Reproduce | Compile and run the attached example. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_7 bug31023 | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
||||||
|
![]() |
|
(0087992) git (administrator) 2019-10-09 20:20 |
Branch CR31023 has been created by jgv. SHA-1: c4318fc58977a88a5fb8efa2fbca373d88b23ed4 Detailed log of new commits: Author: jgv Date: Fri Sep 20 13:52:10 2019 +0300 0031023: Fillet regression in OCCT 7.4 from 7.3 Modify local static function ReorderFaces to be able to process multiple-faces-connecting vertices. |
(0088014) jgv (developer) 2019-10-10 14:33 |
Please add the attached shape bug31032.brep to database. |
(0088015) git (administrator) 2019-10-10 14:35 |
Branch CR31023 has been updated by jgv. SHA-1: d3f62d33722b7f69e2b5513afee8171680bfd29d Detailed log of new commits: Author: jgv Date: Thu Oct 10 14:35:13 2019 +0300 Add test case |
(0088019) galbramc (reporter) 2019-10-10 15:31 |
Since this bug fix required a large number of changes to ChFi3d, could I ask you to take a look at 0030201 as well? That bug has existed in many versions of OCCT. |
(0088097) msv (developer) 2019-10-14 10:26 |
File added. |
(0088113) jgv (developer) 2019-10-14 17:08 |
Please review the branch CR31023. |
(0088118) msv (developer) 2019-10-14 17:56 |
Reviewed. |
(0088474) git (administrator) 2019-10-23 11:51 |
Branch CR31023 has been deleted by kgv. SHA-1: d3f62d33722b7f69e2b5513afee8171680bfd29d |
![]() |
|||
occt: master b0082262
Timestamp: 2019-09-20 10:52:10 Author: jgv Committer: apn [ Details ] [ Diff ] |
0031023: Fillet regression in OCCT 7.4 from 7.3 Modify local static function ReorderFaces to be able to process multiple-faces-connecting vertices. |
||
mod - src/ChFi3d/ChFi3d_Builder_1.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_7/bug31023 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-03 02:27 | galbramc | New Issue | |
2019-10-03 02:27 | galbramc | Assigned To | => abv |
2019-10-03 02:27 | galbramc | File Added: rebuild_fillet.tgz | |
2019-10-03 10:03 | msv | Assigned To | abv => jgv |
2019-10-03 10:03 | msv | Status | new => assigned |
2019-10-03 10:06 | abv | Priority | normal => high |
2019-10-03 10:18 | msv | Product Version | => 7.4.0 |
2019-10-03 10:18 | msv | Target Version | => 7.5.0 |
2019-10-09 20:20 | git | Note Added: 0087992 | |
2019-10-10 14:32 | jgv | File Added: bug31023.brep | |
2019-10-10 14:33 | jgv | Note Added: 0088014 | |
2019-10-10 14:33 | jgv | Assigned To | jgv => msv |
2019-10-10 14:33 | jgv | Status | assigned => feedback |
2019-10-10 14:35 | git | Note Added: 0088015 | |
2019-10-10 15:31 | galbramc | Note Added: 0088019 | |
2019-10-11 11:40 | abv | Relationship added | related to 0030201 |
2019-10-14 10:26 | msv | Note Added: 0088097 | |
2019-10-14 10:27 | msv | Assigned To | msv => jgv |
2019-10-14 10:27 | msv | Status | feedback => assigned |
2019-10-14 17:08 | jgv | Note Added: 0088113 | |
2019-10-14 17:08 | jgv | Assigned To | jgv => msv |
2019-10-14 17:08 | jgv | Status | assigned => resolved |
2019-10-14 17:56 | msv | Note Added: 0088118 | |
2019-10-14 17:56 | msv | Assigned To | msv => bugmaster |
2019-10-14 17:56 | msv | Status | resolved => reviewed |
2019-10-23 01:07 | apn | Changeset attached | => occt master b0082262 |
2019-10-23 01:07 | apn | Assigned To | bugmaster => apn |
2019-10-23 01:07 | apn | Status | reviewed => verified |
2019-10-23 01:07 | apn | Resolution | open => fixed |
2019-10-23 11:51 | git | Note Added: 0088474 | |
2019-10-23 17:00 | apn | Test case number | => bugs modalg_7 bug31023 |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |