0031023: Fillet regression in OCCT 7.4 from 7.3

Modify local static function ReorderFaces to be able to process multiple-faces-connecting vertices.